test/compile_errors/err_duplicate_fn_decl.w
//! expect-error: function 'dup' is already defined

fn dup() -> i32: 1
fn dup() -> i32: 2
